lints.workspace = true

[package]
name = "bridge-core"
version = "0.1.0"
edition = "2021"
description = "Core bridge logic and orchestration for OpenTelemetry Data Lake Bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "data-lake", "observability", "bridge"]
categories = ["observability", "data-processing"]

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Async runtime and networking
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }

# Data processing and serialization
arrow = { workspace = true }
parquet = { workspace = true }
avro-rs = { workspace = true }
deltalake = { workspace = true }
iceberg-rust = { workspace = true }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration and validation
config = "0.14"
validator = { version = "0.16", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID and identifiers
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# Compression and encoding
zstd = "0.13"
flate2 = "1.0"
base64 = "0.21"

# Encryption and cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = "0.5"
scrypt = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Testing
criterion = "0.5"
mockall = "0.12"

# Additional dependencies for bridge-core
num_cpus = "1.16"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"

# Authentication
bridge-auth = { path = "../bridge-auth" }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }



[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
tempfile = "3.8"

# Examples are now defined in the main examples package to avoid naming conflicts

[[example]]
name = "delta_lake_demo"
path = "examples/delta_lake_demo.rs"
