lints.workspace = true

[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"
description = "OpenTelemetry data ingestion for the bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "ingestion", "observability", "bridge"]
categories = ["observability", "data-processing"]

[dependencies]
# Workspace dependencies
bridge-core = { path = "../bridge-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-jaeger = "0.20"
opentelemetry-zipkin = "0.20"

# OTel-Arrow dependencies
# otel-arrow-rust = { workspace = true }

# Arrow dependencies
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
arrow-cast = { workspace = true }
parquet = { workspace = true }

# Async and networking
tonic = { workspace = true }
hyper = { workspace = true }
hyper-util = "0.1"
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

# Data processing
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
prost = { workspace = true }

# Kafka client (optional for now)
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi-vendored"], optional = true }

# Avro support
avro-rs = { workspace = true }

# Additional dependencies
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.21"
zstd = { workspace = true }
rand = "0.8"
hostname = "0.3"
prometheus = "0.13"
prometheus-client = "0.22"
jsonwebtoken = "9.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
notify = "6.1"
yaml-rust = "0.4"
toml = "0.8"
tower-http = { workspace = true, features = ["cors"] }
hyper-tls = "0.5"
sysinfo = "0.30"
bridge-auth = { path = "../bridge-auth" }
tokio-rustls = "0.24"
tempfile = "3.8"
jsonpath_lib = "0.3"

[features]
default = []
kafka = ["rdkafka"]

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
