lints.workspace = true

[package]
name = "schema-registry"
version = "0.1.0"
edition = "2021"
description = "Schema registry for OpenTelemetry telemetry schemas and lakehouse schema evolution"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "schema", "registry", "telemetry", "lakehouse"]
categories = ["observability", "data-structures"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# OpenTelemetry dependencies
opentelemetry = "0.22"
opentelemetry-semantic-conventions = "0.14"
opentelemetry-proto = { workspace = true }

# Validation and schema
jsonschema = { version = "0.18", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }

# HTTP and networking
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Configuration
config = "0.14"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Data structures
indexmap = { version = "2.2", features = ["serde"] }

# Hashing and fingerprinting
sha2 = "0.10"
base64 = "0.21"

# URL handling
url = "2.5"

# Regex for validation
regex = "1.10"

# Random number generation
rand = { version = "0.8", optional = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Workspace dependencies
bridge-core = { path = "../bridge-core" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"

[features]
default = ["postgres", "redis", "http", "metrics", "validation"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
redis = ["dep:redis"]
http = ["dep:axum", "dep:hyper"]
validation = ["dep:jsonschema", "dep:validator"]
metrics = ["dep:prometheus", "dep:metrics", "dep:metrics-exporter-prometheus"]
rand = ["dep:rand"]

[[bin]]
name = "schema-registry"
path = "src/main.rs"

# Examples are now defined in the main examples package to avoid naming conflicts

[lib]
name = "schema_registry"
path = "src/lib.rs"
