lints.workspace = true

[package]
name = "streaming-processor"
version = "0.1.0"
edition = "2021"
description = "Streaming data processor for the bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["streaming", "processing", "observability", "bridge"]
categories = ["observability", "data-processing"]

[dependencies]
# Workspace dependencies
bridge-core = { path = "../bridge-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-proto = { workspace = true }

# Async and networking
tonic = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Data processing
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Arrow ecosystem for efficient data serialization
arrow = { workspace = true }
arrow-ipc = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }

# Data format support
parquet = { workspace = true }
avro-rs = "0.13"
serde_yaml = "0.9"
csv-async = "1.3"
prost = { workspace = true }

# Kafka dependencies
kafka = "0.9"
rdkafka = { version = "0.35", features = ["cmake-build"], optional = true }

# Additional dependencies
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing-subscriber = { workspace = true }
regex = "1.10"
url = "2.4"
notify = "6.1"

[features]
default = []
kafka = ["rdkafka"]

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
quickcheck = "1.0"
tempfile = "3.8"
