lints.workspace = true

[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"
description = "Lake House Connectors Test Runner - Native Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
